--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1246,9 +1246,9 @@ textarea.form-control {
 
 #footer div {
     cursor: pointer;
-    margin-left: 85%;
-    width: 20rem;
-    font-size: 20px;
+    margin-left: 80%;
+    width: 30rem;
+    font-size: 2rem;
 }
 
 #footer img {
@@ -1261,6 +1261,83 @@ textarea.form-control {
 
 /*  12. RESPONSIVE
 /*-----------------------------------------------------------------------------------*/
+@media (min-width: 1701px  ) {
+    .video {
+        position: absolute;
+        top: -200%;
+        left: -200%;
+        right: -200%;
+        bottom: -200%;
+        margin: auto;
+        min-width: 100vw;
+        min-height: 100vh;
+        max-width: calc(100vh * 1.78);
+        max-height: calc(100vw / 1.78);
+        max-width: 100%;
+    }
+
+    body {
+        font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+        color: #666;
+        letter-spacing: .1rem;
+        opacity: 0;
+        font-size: 3rem;
+    }
+
+    h5 {
+        font-size: 25px;
+    }
+
+    #footer div {
+        cursor: pointer;
+        margin-left: 80%;
+        width: 40rem;
+        font-size: 3rem;
+    }
+
+    .align-left {
+        margin-left: 10%;
+    }
+
+    .align-left p {
+        font-size: 20px;
+    }
+
+    .text__wrapp {
+        width: 120%;
+        padding-bottom: 10%;
+        margin-left: 40%;
+    }
+    .text {
+        font-size: 4rem;
+    }
+   
+    .btn {
+        margin-top: 5%;
+        font-size: 2.5rem;
+    }
+     .video__parallax {
+        position: absolute;
+        top: -200%;
+        left: -200%;
+        right: -200%;
+        bottom: -200%;
+        margin: auto;
+        min-width: 100vw;
+        min-height: 100vh;
+        max-width: calc(100vh * 1.78);
+        max-height: calc(100vw / 1.78);
+        max-width: 100%;
+     }
+
+     .row {
+        max-width: 80%;
+     }
+     .text_info {
+        font-size: 3rem;
+     }
+}
+
 
 @media (max-width: 1700px) {
     .video {
@@ -1275,6 +1352,14 @@ textarea.form-control {
         max-width: calc(100vh * 1.78);
         max-height: calc(100vw / 1.78);
         max-width: 100%;
+    }
+
+    body {
+        font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+        color: #666;
+        letter-spacing: .1rem;
+        opacity: 0;
+        font-size: 1.5rem;
     }
 }
 
